src/content/docs/sdk/unity/v5/features/events-zh.mdx
---
title: "发送事件信息"
description: "使用这些方法向 Adjust 发送事件信息。"
slug: "zh/sdk/unity/features/events"
---

Adjust SDK 提供一个 `AdjustEvent` 对象，用于架构并向 Adjust 服务器发送来自您应用的事件信息。

## 实例化 AdjustEvent 对象 {#instantiate-an-adjustevent-object}

<CodeBlock title="方法签名">

```cs
public AdjustEvent(string eventToken)
```

</CodeBlock>

要使用 Adjust SDK 发送事件信息，请实例化一个 `AdjustEvent` 对象。该对象中包含的变量会在应用中发生事件时被发送给 Adjust。

要实例化事件对象，请创建新的 `AdjustEvent` 实例，并传送下列参数：

-  `eventToken` \(`string`\)：您的 Adjust [事件识别码](https://help.adjust.com/zh/article/add-events#manage-your-events)。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
Adjust.TrackEvent(adjustEvent);
```

## 发送事件 {#send-an-event}

<CodeBlock title="方法签名">

```cs
public static void TrackEvent(AdjustEvent adjustEvent);
```

</CodeBlock>

您可以将[Adjust 事件识别码](https://help.adjust.com/zh/article/add-events#add-event)关联至应用内行为，以此对其进行记录。要记录事件：

-  创建一个新的 Adjust 事件实例并将事件识别码作为字符串参数进行发送。
-  使用事件实例作为 argument 调用`Adust.TrackEvent`方法。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
Adjust.TrackEvent(adjustEvent);
```

### 示例 {#example}

此示例展示了如何使用识别码`g3mfiw`来记录事件。

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="事件日志" collapse="6-46">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  android_uuid     781f17d5-5048-4fae-a4e5-77b58bab62b9
  api_level        34
  app_token        2fm9gkqubvpc
  app_version      1.0
  attribution_deeplink 1
  callback_params  {"key":"value","foo":"bar"}
  connectivity_type 1
  country          US
  cpu_type         arm64-v8a
  created_at       2024-01-25T14:13:16.151Z+0100
  currency         EUR
  device_manufacturer Google
  device_name      sdk_gphone64_arm64
  device_type      phone
  display_height   2205
  display_width    1080
  environment      sandbox
  event_buffering_enabled 0
  event_count      3
  event_token      g3mfiw
  gps_adid         5962dfc1-3a53-4692-850b-22c4bf4311a5
  gps_adid_attempt 2
  gps_adid_src     service
  hardware_name    UE1A.230829.036
  language         en
  mcc              310
  mnc              260
  needs_response_details 1
  os_build         UE1A.230829.036
  os_name          android
  os_version       14
  package_name     com.adjust.examples
  partner_params   {"key":"value","foo":"bar"}
  revenue          0.25
  screen_density   high
  screen_format    long
  screen_size      normal
  session_count    2
  session_length   23
  subsession_count 1
  time_spent       23
  tracking_enabled 1
  ui_mode          1

```

</CodeBlock>

## 记录事件收入 {#record-event-revenue}

<CodeBlock title="方法签名">

```cs
public void SetRevenue(double amount, string currency);
```

</CodeBlock>

您可以通过在实例上设定 revenue \(收入\) 和 currency \(币种\) 属性来记录与事件关联的收入。使用此功能来在应用内记录产生收入的行为。

要设置这些属性，可以调用`AdjustEvent`实例的 `SetRevenue` 方法并传递以下参数：

-  `amount` \(`double`\)：事件产生的收入额
-  `currency` \(`string`\)：事件币种的[ISO 4217 代码](https://www.iban.com/currency-codes)。

<Callout type="seealso">

欢迎查看[记录不同币种的购买](https://help.adjust.com/zh/article/currency-conversion)一文，了解更多信息。

</Callout>

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.SetRevenue(0.01, "EUR");
//...
Adjust.TrackEvent(adjustEvent);
```

### 示例 {#example-1}

此示例展示了如何使用识别码`g3mfiw`来记录事件。该函数会将该事件的 `revenue` 属性设为 _`0.25`_ ，并将 `currency` 属性设为 _`EUR`_ 。

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.SetRevenue(0.25, "EUR");
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="事件日志" highlight="{range: 7-8}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  revenue          0.25
  currency         EUR
```

</CodeBlock>

## 事件数据去重 {#event-deduplication}

<CodeBlock title="属性声明">

```cs
public string DeduplicationId { get; set; }
```

</CodeBlock>

您也可以发送一个可选的标识符，以避免记录重复事件。SDK 会存储最近 10 个标识符，带有重复交易 ID 的收入事件会被跳过。

要设置标识符，请将`AdjustEvent`实例的`DeduplicationId`属性设置为交易 ID。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.DeduplicationId = "deduplicationId";
//...
Adjust.TrackEvent(adjustEvent);
```

### 示例 {#example-2}

此示例展示了如何使用识别码`g3mfiw`来记录事件。该函数将 `DeduplicationId` 属性设为 `5e85484b-1ebc-4141-aab7-25b869e54c49`。

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
string deduplicationId = "5e85484b-1ebc-4141-aab7-25b869e54c49"
adjustEvent.DeduplicationId = deduplicationId;
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="事件日志" highlight="{range: 7}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  deduplication_id   5e85484b-1ebc-4141-aab7-25b869e54c49
```

</CodeBlock>

## 添加回传参数 {#add-callback-parameters}

<CodeBlock title="方法签名">

```cs
public void AddCallbackParameter(string key, string value);
```

</CodeBlock>

您在 Adjust 控制面板中[注册回传 URL](https://help.adjust.com/zh/article/set-up-callbacks)，SDK 监测到事件后，会向您的回传 URL 发送一个 GET 请求。

您可以设置发送到服务器的回传参数。配置好事件的参数后，SDK 会将参数附加至[您的回传 URL](https://help.adjust.com/zh/article/raw-data-exports)。您可以利用该信息，通过自己的 BI 系统分析用户应用内行为。

使用`string`键值对参数调用`AdjustEvent`实例的`AddCallbackParameter`方法，以此向事件添加回传参数。多次调用该方法可添加多个参数。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.AddCallbackParameter("key", "value");
//...
Adjust.TrackEvent(adjustEvent);
```

Adjust SDK 监测事件，并向附加回传参数的 URL 发送请求。例如，如果您注册了 URL`https://www.mydomain.com/callback`，则回传为：

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

<Callout type="note">

Adjust 不会存储您的自定义回传参数。自定义回传参数只会附加在您的回传 URL 中。

</Callout>

如果您使用的是 CSV 上传，请务必在 CSV 定义中添加参数。

Adjust 支持许多占位符，这些占位符可用来将信息从 SDK 发送至您的 URL。例如，iOS 的`{idfa}`占位符和安卓的`{gps_adid}`占位符。`{publisher_parameter}`占位符可在单一字符串中呈现所有回传参数。

<Callout type="seealso">

若想进一步了解 URL 回传，查看可用参数的完整列表，请参阅[回传指南](https://help.adjust.com/zh/article/callbacks)。

</Callout>

### 示例 {#example-3}

此示例展示了如何使用识别码`g3mfiw`来记录事件。以下回传参数被添加：

-  . `event_token`
-  事件产生的 `revenue_amount`

产生的回传 URL 如下：

```http
http://www.mydomain.com/callback?event_token=g3mfiw&revenue_amount=0.05
```

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.AddCallbackParameter("event_token", "g3mfiw");
adjustEvent.AddCallbackParameter("revenue_amount", "0.05");
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="事件日志" highlight="{range: 4}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  callback_params  {"event_token":"g3mfiw","revenue_amount":"0.05"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw

```

</CodeBlock>

## 添加合作伙伴参数 {#add-partner-parameters}

<CodeBlock title="方法签名">

```cs
public void AddPartnerParameter(string key, string value);
```

</CodeBlock>

您可以添加[合作伙伴参数](https://help.adjust.com/zh/article/data-sharing-ad-network#map-parameters)，向渠道合作伙伴发送额外的信息。

Adjust 可向您设置的[外部合作伙伴](https://help.adjust.com/zh/article/integrated-partners)发送合作伙伴参数。这些信息可用来进行更精细的数据分析，开展再营销活动。您设置好参数并为合作伙伴启用参数转发后，Adjust 服务器就会将这些参数转发给合作伙伴。

<Callout type="note">

合作伙伴参数不会默认出现在原始数据中。您可以添加`{partner_parameters}`占位符，在同一个字符串中接收参数。

</Callout>

使用`string`键值对参数调用`AdjustEvent`参数的`AddPartnerParameter`方法，以此向事件添加合作伙伴参数。多次调用该方法可添加多个参数。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.AddPartnerParameter("key", "value");
//...
Adjust.TrackEvent(adjustEvent);
```

### 示例 {#example-4}

此示例展示了如何使用识别码`g3mfiw`来记录事件。以下合作伙伴参数被添加：

-  相关产品的 `product_id`
-  触发事件的用户 `user_id`

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.AddPartnerParameter("product_id", "29");
adjustEvent.AddPartnerParameter("user_id", "835");
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="事件日志" highlight="{range: 4}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  partner_params  {"product_id":"29","user_id":"835"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw
```

</CodeBlock>

## 添加回传标识符 {#add-a-callback-identifier}

<CodeBlock title="属性声明">

```cs
public string CallbackId { get; set; }
```

</CodeBlock>

您可以为每个事件添加自定义字符串标识符来报告[事件成功和失败](/zh/sdk/unity/features/callbacks#event-callbacks)。要为事件分配回传标识符，请设置`AdjustEvent`实例的`CallbackId`属性。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.CallbackId = "{your_callback_id}";
//...
Adjust.TrackEvent(adjustEvent);
```

### 示例 {#example-5}

此示例展示了如何使用识别码`g3mfiw`来记录事件。在该示例中，`CallbackId` 被设为了 `f2e728d8-271b-49ab-80ea-27830a215147`。

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
string callbackId = "f2e728d8-271b-49ab-80ea-27830a215147"
adjustEvent.CallbackId = callbackId;
Adjust.TrackEvent(adjustEvent);
```

<CodeBlock title="事件日志" highlight="{range: 7}">

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      g3mfiw
  callback_id      f2e728d8-271b-49ab-80ea-27830a215147
```

</CodeBlock>
